Closed
Bug 514412
Opened 17 years ago
Closed 16 years ago
about:blank should derefence to an empty stream
Categories
(Core :: Networking, defect)
Core
Networking
Tracking
()
RESOLVED
FIXED
mozilla1.9.3a5
People
(Reporter: hsivonen, Assigned: steffen.wilberg)
References
()
Details
(Keywords: html5)
Attachments
(1 file)
|
3.04 KB,
patch
|
bzbarsky
:
review+
hsivonen
:
feedback+
|
Details | Diff | Splinter Review |
Steps to reproduce:
1) Load about:blank
2) View source.
Actual results:
<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><title></title></head><body></body></html>
Expected results:
Per http://www.whatwg.org/specs/web-apps/current-work/#fetching-resources expected the source to be empty.
Additional info:
This affects the DOM you get from <iframe src="about:blank"></iframe>. With the empty string, the doctype and the title element shouldn't be in the DOM.
| Reporter | ||
Comment 1•17 years ago
|
||
It should have Content-Type: text/plain; charset="utf-8" and be an empty document. Not Another one Content-Type: text/html; charset="iso-8859-2" empty document shown in quirks mode. We promote standards, not IE.
I have found this bug because I don't like the fact that Firefox uses Quirks mode for about:blank.
Firefox should completely get rid of quirks mode and start to control markup syntax strictly. (sorry for my English). It should use only XHTML 1.1 because of the strict error checking and develop itself in that direction, develop in XHTML 2.0 rendering (W3C should start works on it again), not for another soup of tags, called HTML 5.
| Reporter | ||
Comment 6•16 years ago
|
||
(In reply to comment #4)
> I have found this bug because I don't like the fact that Firefox uses Quirks
> mode for about:blank.
Could you please elaborate on what kind of problems the quirks modeness of about:blank causes to you in practice?
I did not write that comment, but I can show tou problems with it I can see.
At first:
https://bugzilla.mozilla.org/show_bug.cgi?id=514412#c0
At second:
Firefox still uses quirks mode and do not show people that era of IE faded away permamently, and websites, or rather files, like that:
http://www.mif.pg.gda.pl/homepages/rsob/
still are created. Quirks mode should be completely deprecated and thrown out from the Internet and all browsers.
At third:
Firefox promotes strict standards, not soup of tags, and that is not exactly like 'We believe that the internet should be public, open and accessible.'
(In reply to comment #6)
> (In reply to comment #4)
> > I have found this bug because I don't like the fact that Firefox uses Quirks
> > mode for about:blank.
>
> Could you please elaborate on what kind of problems the quirks modeness of
> about:blank causes to you in practice?
In practice, this bug doesn't cause any problems. But the quirks mode is the most conspicuous part of the bug for a general user. I have never known that about:blank should refer to an empty stream, but everybody has heard that quirky mode is against standard. That's why I considered it a bug - and found it here and voted for it (how can such an empty page use a quirky mode? it has no vendor-specific elements).
| Assignee | ||
Comment 9•16 years ago
|
||
I had to change the expected result of the designmode test.
Old: <head><title></title></head><body>abc</body>
New: <head></head><body>abc</body>
Should the mime type be changed to text/plain?
Assignee: nobody → steffen.wilberg
Status: NEW → ASSIGNED
Attachment #441142 -
Flags: review?(hsivonen)
| Assignee | ||
Comment 10•16 years ago
|
||
Probably not:
> Applications resolving the URI "about:blank" MUST return a resource of zero
> length, containing no data, with the media type "text/html" and the character
> encoding "UTF-8".
http://tools.ietf.org/html/draft-holsten-about-uri-scheme-04#section-5.1.1
| Assignee | ||
Updated•16 years ago
|
Attachment #441142 -
Flags: review?(hsivonen) → feedback?(hsivonen)
| Reporter | ||
Comment 11•16 years ago
|
||
Comment on attachment 441142 [details] [diff] [review]
patch
Looks good to me.
Attachment #441142 -
Flags: feedback?(hsivonen) → feedback+
| Assignee | ||
Updated•16 years ago
|
Attachment #441142 -
Flags: review?(bzbarsky)
Comment 12•16 years ago
|
||
Comment on attachment 441142 [details] [diff] [review]
patch
OK, let's give his a shot... I assume this still creates an <html> and <body> in the sink, right?
Attachment #441142 -
Flags: review?(bzbarsky) → review+
| Assignee | ||
Comment 13•16 years ago
|
||
How do I tell? Both Firebug and DOM Inspector show <html>, <head> and <body>. Only <title> is missing.
Comment 14•16 years ago
|
||
> Both Firebug and DOM Inspector show <html>, <head> and <body>.
Then the answer to my question is "yes". ;)
| Assignee | ||
Comment 15•16 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.3a5
You need to log in
before you can comment on or make changes to this bug.
Description
•