Bug 514412: about:blank should derefence to an empty stream. r=bzbarsky